kubernetes/deployment.yml
# Kubernetes deployment descriptor of a Go gRPC server application
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: grpc-productinfo-server 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: grpc-productinfo-server
  template:
    metadata:
      labels:
        app: grpc-productinfo-server
    spec:
      containers:
      - name: grpc-productinfo-server 
        image: schrius/grpc-productinfo-server 
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50051
          name: grpc
