kubernetes/service.yml
# Kubernetes service descriptor of a Go gRPC server application
apiVersion: v1
kind: Service 
metadata:
  name: productinfo 
spec:
  selector:
    app: grpc-productinfo-server
  ports:
  - port: 50051 
    targetPort: 50051
    name: grpc
  type: NodePort
